# verify_nigerian_number

./: .gitignore  README.md  README.rst  models.py  setup.cfg  utils.py
src/: enums.py
