[metadata]
name = verify-nigerian-number
version = 1.0.0
description = A python library for getting details of a Nigerian mobile number.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/yusufoguntola/verify_nigerian_number
author = Yusuf Oguntola
author_email = yusuf.oguntola@gmail.com
summary = Determine details of a Nigerian mobile number
license = MIT License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.5